*Creating food detail screen Ui. *Improving food item ui.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="user_image">User image</string>
     <string name="food_image">Food image</string>
     <string name="categories">Categories</string>
+    <string name="back_arrow">Back arrow</string>
 </resources>
