--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="food_image">Food image</string>
     <string name="categories">Categories</string>
     <string name="back_arrow">Back arrow</string>
+    <string name="response_error">Something went wrong, please try again later.</string>
 </resources>
